<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>impatient-core-java</artifactId>
        <groupId>org.example</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>ch04</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version> <!-- 使用最新版本 -->
                <configuration>
                    <source>17</source> <!-- 指定 Java 源代码版本 -->
                    <target>17</target> <!-- 指定 Java 目标字节码版本 -->
                    <release>17</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg> <!-- 启用预览特性 -->
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>